--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,15 @@
 /.next/
 /out/
 
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
 # production
 /build
 
