--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
+    "@types/classnames": "^2.3.1",
     "@types/react": "17.0.11",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
