--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cross-env": "^7.0.3",
+    "date-fns": "^2.22.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "next": "10.2.3",
     "react": "17.0.2",
