--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "cross-env": "^7.0.3",
     "date-fns": "^2.22.1",
     "eslint-plugin-react-hooks": "^4.2.0",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
     "@types/classnames": "^2.3.1",
+    "@types/node": "^15.12.2",
     "@types/react": "17.0.11",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
