--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.10.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
