--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cross-env": "^7.0.3",
     "date-fns": "^2.22.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "framer-motion": "^4.1.17",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
