--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
           name: docker.pkg.github.com/Armer7/top-app/top-app
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASWORD }}
-          tags: "develop"
+          tags: "develop v1"
