--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: Publish Docker
 # events but only for the master branch
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -14,7 +14,8 @@ jobs:
       - name: Publish to Registry
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: docker.pkg.github.com/Armer7/top-app/top-app
+          registry: docker.pkg.github.com
+          name: docker.pkg.github.com/armer7/top-app/top-app
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASWORD }}
           tags: "develop v1"
